@@ -3,6 +3,9 @@ This is a record of changes to SerialEM since it was first publicly released.
 * marks changes or enhancements noticeable to the user, or items of particular
 significance.
 ============================================================================
+7/13/17: Clear out long summed frame lists and give a message saying to set
+them up again (In 3.6).
+
 7/9/17: SEM_3-6-10
 7/8/17: Add Navigator option to all current Low Dose parameters to be used
 instead of the map parameters for Realign to Item.
